octsympy x.y.z (yyyy-mm-dd)
===========================

 *  New commands:

          ldivide
          mldivide

 *  Symbolic backslash support.



octsympy 0.1.2 (yyyy-mm-dd)
===========================

 *  New commands:

          children           rhs
          expm	             setdiff
          lhs	             setxor
          pinv	             trace
          potential

 *  Support new SymPy 0.7.6.  0.7.5 should still work for now.



octsympy 0.1.1 (2014-10-20)  Rose Garden
========================================

Major Changes
-------------

 *  Fix sym(double) approx by rationals (issue #121, thanks HuiZhong LU).

 *  Improvements to sym() command: you can now pass the underlying "srepr"
    SymPy presentation to create an object.

 *  Bug fixes: improvements to indexing, findsymbols and assumptions,
    isscalar/isvector failures on recent Octave, output formatting fixes,

 *  New commands:

          and             isscalar
          char            isvector
          diag            nnz
          eig             or
          iscolumn        uplus
          isrow           xor


Minor Changes
-------------

 *  Improvements to logical and isAlways commands.

 *  IPC system() should work on windows.

 *  Better test system, easier to see "real" failures rather than expected
    (known) failures.

 *  Improved handling of symfuns.

 *  Improvements to internel string handling/escaping especially newlines.

     -  Enter a multiline command using a cell array of lines e.g.,
        `python_cmd({'a = 10' 'return (a, 2*a)'})
	or
        `python_cmd({'a = 10'; 'return (a, 2*a)'})
     -  The same applies to `evalpy`.  If you need the old deprecated
        behaviour, it is still available as `python_cmd_string`.



octsympy 0.1.0 (2014-08-27)  Pacific Coffee
===========================================

Major Changes
-------------

 *  `sympref` replaces `octsympy_config`.  You can change the Python
    interpreter with `sympref python /path/to/python`.
